fix for li clickable when collapsed

--- a/paw-webapp/pawwebapp/src/main/webapp/resources/css/style.css
+++ b/paw-webapp/pawwebapp/src/main/webapp/resources/css/style.css
@@ -936,7 +936,8 @@ margin-bottom: 0; margin-left:4vw; width:60%; align-self: end;
 
 /* ----- some features ----- */
 #product_form .select-wrapper select, .login #login_form #rememberme input,
-#product_form .input-field .select-wrapper ul li input{
+#product_form .input-field .select-wrapper ul li input,
+.container #product_form .input-field .select-wrapper ul{
     display: none;
 }
 
